
    HADOOP-8857. hadoop.http.authentication.signature.secret.file docs 
    should not state that secret is randomly generated. (tucu)

    HADOOP-9231. Parametrize staging URL for the uniformity of
    distributionManagement. (Konstantin Boudnik via tgraves)

    HADOOP-9124. SortedMapWritable violates contract of Map interface for
    equals() and hashCode(). (Surenkumar Nihalani via tgraves)

Release 0.23.6 - UNRELEASED

  INCOMPATIBLE CHANGES

  NEW FEATURES

    HADOOP-9020. Add a SASL PLAIN server (daryn via tgraves)

  IMPROVEMENTS

    HADOOP-8931. Add Java version to startup message. (eli)

    HADOOP-9108. Add a method to clear terminateCalled to ExitUtil for test 
    cases (Kihwal Lee via tgraves)

    HADOOP-8561. Introduce HADOOP_PROXY_USER for secure impersonation in 
    child hadoop client processes (Yu Gao via tgraves)

    HADOOP-9217. Print thread dumps when hadoop-common tests fail.
    (Andrey Klochkov via suresh)

    HADOOP-9247. Parametrize Clover "generateXxx" properties to make them
    re-definable via -D in mvn calls. (Ivan A. Veselovsky via suresh)

  OPTIMIZATIONS

  BUG FIXES

    HADOOP-9072. Hadoop-Common-0.23-Build Fails to build in Jenkins 
    (Robert Parker via tgraves)

    HADOOP-8992. Enhance unit-test coverage of class HarFileSystem (Ivan A.
    Veselovsky via bobby)

    HADOOP-9038. unit-tests for AllocatorPerContext.PathIterator (Ivan A.
    Veselovsky via bobby)

    HADOOP-7868. Hadoop native fails to compile when default linker
    option is -Wl,--as-needed. (Trevor Robinson via tgraves)

    HADOOP-9135. JniBasedUnixGroupsMappingWithFallback should log at debug
    rather than info during fallback. (Colin Patrick McCabe via todd)

    HADOOP-9105. FsShell -moveFromLocal erroneously fails (daryn via bobby)

    HADOOP-9152. HDFS can report negative DFS Used on clusters with very 
    small amounts of data (Brock Noland via tgraves)

    HADOOP-9169. Bring branch-0.23 ExitUtil up to same level as branch-2